Se agrega la opcion de exportar a excel los resultados.

--- a/src/BalotajeBundle/Resources/views/Mesa/index.html.twig
+++ b/src/BalotajeBundle/Resources/views/Mesa/index.html.twig
@@ -65,6 +65,9 @@
                         <a class="btn btn-primary" href="{{ path('mesas_new') }}">
                             Nuevo
                         </a>
+                        <a class="btn btn-primary" href="{{ path('exportar_resultados') }}" target="_blank">
+                            <i class="fa fa-file-excel-o"></i> Exportar
+                        </a>
 
                     </div>
                 </div>
