Se omiten google bots para estas apps

--- a/src/ThemeBundle/Resources/views/Default/layout_base.html.twig
+++ b/src/ThemeBundle/Resources/views/Default/layout_base.html.twig
@@ -6,6 +6,8 @@
     <title>{% block title %}{% endblock title %} | FundacionPIM</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="robots" content="nofollow">
+    <meta name="googlebot" content="noindex">
     <!-- Bootstrap 3.3.5 -->
     <link rel="stylesheet" href="{{ asset('bundles/theme/AdminLTE-2.3.0/bootstrap/css/bootstrap.min.css') }}">
     <!-- Font Awesome -->
